# openenv-incident-response

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  deploy_to_github.bat  deploy_to_hf.bat  env_help.txt  evaluate_frontend.py  generate_realistic_baseline.py  inference.py  metadata.json  openenv.yaml  openenv_init_help.txt  openenv_validate.txt  openenv_validate_final.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  run_mocked_baseline.py  validate.sh  validator.py  vite.config.ts
baseline/: parse_action.py  results.json  system_prompt.py
environment/: env.py  models.py  reward.py  state_machine.py
environment/scenarios/: task1_easy.py  task2_medium.py  task3_hard.py
graders/: base_grader.py  grade_payment.py  grader_task2.py  grader_task3.py
log_generator/: synthetic_logs.py
server/: app.py
src/: App.tsx  types.ts
tests/: test_env.py
