[project]
name = "openenv-incident"
version = "1.0.0"
description = "Incident Response AI"
requires-python = ">=3.11"
authors = [
    {name = "yajd19"}
]
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "openai",
    "requests"
]

[project.scripts]
server = "server.app:main"
